<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Recent Contacts Widget</string>
    <string name="short_app_name">Recent Contacts</string>
    
    <!-- About -->
    <string name="about_header">Using the widget</string>
    <string name="about_text">
    To use the Recent Contacts Widget, please long-press on an empty place of your home screen.
    Select the Widget option. Then select the Recent Contacts Widget in the list.
    </string>

	<!-- Preferences -->
    <string name="pref_provider_header">Widget Content</string>
    <string name="pref_num_per_page">Contacts displayed</string>
    <string name="pref_num_per_page_text">Number of contacts to be displayed on widget</string>
    <string name="pref_num_retrieved">Contacts retrieved</string>
    <string name="pref_num_retrieved_text">Number of contacts to be displayed in total (More than 30 uses a lot of resources)</string>
    <string name="pref_provider_email">GMail - EXPERIMENTAL</string>
    <string name="pref_provider_email_text">Whether the widget aggregates GMail conversations (2.x only)</string>
    <string name="pref_provider_calendar">Calendar - EXPERIMENTAL</string>
    <string name="pref_provider_calendar_text">Whether the widget aggregates the calendar events (2.x only)</string>
	
	<!-- Common -->
    <string name="save_action">Save</string>
    <string name="close_action">Close</string>
    <string name="loading">Loading...</string>

	<!-- Providers -->    
    <string name="popup_telephone">Telephone</string>
    <string name="popup_sms">SMS</string>
    <string name="popup_email">Gmail</string>
    <string name="unknownNumber">Unknown</string>

	<!-- Popup Activity -->
    <string name="popup_fling_text">Please swipe left or right to view another contact.</string>

	<!-- Widget -->
    <string name="nextButtonText">Next</string>

	<!-- Unused -->
    <string name="configure_header">Hello there. No configuration yet. Just click on save.</string>
</resources>
