<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:padding="10dip">
	
	<TextView android:layout_width="fill_parent"
		android:textStyle="bold" android:textSize="14dip"
		android:layout_height="wrap_content" android:text="@string/about_header" />
	
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/about_text" />
	</ScrollView>
	
	<Button android:text="@string/close_action" android:id="@+id/closeButton"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_gravity="bottom|center_horizontal" />

</LinearLayout>
