<?xml version="1.0" encoding="utf-8"?>
	<!--
		Popup that is supposed to be shown when a button is pressed... or not.
	-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/eventpopupMain" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center_vertical|center_horizontal"
	android:orientation="vertical" android:layout_weight="80"
	android:paddingLeft="5dip" android:paddingRight="5dip" android:paddingBottom="5dip">

	<RelativeLayout
		android:paddingBottom="5dip" android:paddingTop="5dip"
		android:id="@+id/popupHeader" android:gravity="center_vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		
		<TextView android:id="@+id/popupText" android:layout_centerInParent="true"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/loading" android:textSize="20dip"
			android:maxLines="3" android:ellipsize="end" />

		<ImageButton android:id="@+id/flingIcon"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:src="@drawable/media_seek_forward" android:background="@android:color/transparent" />

	</RelativeLayout>

	<ImageView android:src="@android:drawable/divider_horizontal_dim_dark"
		android:paddingBottom="5dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />

	<!--
		TODO: Create those table layout dynamically? Use an existing xml as a
		template?
	-->

	<ScrollView android:layout_width="fill_parent" android:id="@+id/eventPopupDataView"
		android:layout_height="fill_parent" android:fillViewport="true">

		<LinearLayout android:orientation="vertical" android:id="@+id/tables"
			android:isScrollContainer="true" android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<LinearLayout android:id="@+id/popupLayout1" style="@style/PopupEventGroup">
				<ImageButton android:id="@+id/popupTableAction1" style="@style/PopupEventButton"
					android:src="@android:drawable/sym_action_call" />
				<TableLayout android:id="@+id/popupTable1" style="@style/PopupEventTable">
					<TextView android:text="@string/popup_telephone" style="@style/PopupEventTableHeader" />
				</TableLayout>
			</LinearLayout>

			<LinearLayout android:id="@+id/popupLayout2" style="@style/PopupEventGroup">
				<ImageButton android:id="@+id/popupTableAction2" style="@style/PopupEventButton"
					android:src="@drawable/sym_action_sms" />
				<TableLayout android:id="@+id/popupTable2" style="@style/PopupEventTable">
					<TextView android:text="@string/popup_sms" style="@style/PopupEventTableHeader" />
				</TableLayout>
			</LinearLayout>

			<LinearLayout android:id="@+id/popupLayout3" style="@style/PopupEventGroup"
				android:visibility="gone">
				<ImageButton android:id="@+id/popupTableAction3" style="@style/PopupEventButton"
					android:src="@android:drawable/ic_dialog_email" />
				<TableLayout android:id="@+id/popupTable3" style="@style/PopupEventTable">
					<TextView android:text="@string/popup_email" style="@style/PopupEventTableHeader" />
				</TableLayout>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>
